refactor: update style in certificates validator
- remove separator in FAQ
- remove separetor in Certificates validator

--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -224,16 +224,6 @@ footer#openuchile-footer img:hover {
 
 /* Certificate Validation */
 
-#certificate_validation add-margin-bottom {
-    border-bottom: .15rem solid black;
-    color: black;
-}
-
-#certificate_validation .card, #certificate_validation input {
-    background-color: #00000021;
-    border: none;
-}
-
 #certificate_validation .btn {
     box-shadow: none !important;
     color: #ffff;
@@ -244,8 +234,12 @@ footer#openuchile-footer img:hover {
 }
 
 #certificate_validation .btn:hover {
-    background-color: #048dc9;
-    border-color: #048dc9;
+    background-color: #008852;
+    border-color: #008852;
+}
+#certificate_validation .card{
+    background-color: var(--background-component-color);
+    border-radius: 15px;
 }
 /* LOGIN */
 
