--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -1830,6 +1830,7 @@ body .wrapper-preview-menu .preview-menu {
     margin-top:1.5rem;
     border-top-left-radius:5px;
     border-top-right-radius:5px;
+    height: auto;
 }
 
 .separator {
@@ -2036,6 +2037,7 @@ body .wrapper-preview-menu .preview-menu {
 }
 
 .index-text-presentation{
+    color: white;
     font-weight: 700;
     font-size: 60px;
     line-height: normal;
