fix(fixup): fixes faq tab link in home page

--- a/lms/templates/courses_list.html
+++ b/lms/templates/courses_list.html
@@ -92,7 +92,7 @@
         <div class="d-flex justify-content-md-end justify-content-sm-center tab-content-text">
           <p class="text-justify p-3 p-sm-3 p-md-5 p-lg-5 p-xl-5 m-2 col-xl-6 col-lg-12 col-md-12 col-sm-12">
             ${_("OpenUChile's platform runs on Open edX technology, which allows it to offer online courses with an interactive and flexible learning experience. The courses are organized in thematic modules and include video lectures, readings, discussion forums, practical activities and evaluations. Some courses are free and open, while others require payment to access additional content or certification. To get started, simply register at open.uchile.cl, select a course and follow the instructions. The site also has a Frequently Asked Questions (FAQ) section and technical support to resolve doubts during the process.")}
-            <a class="text-decoration-none" href=". https://open.uchile.cl/faq" role="button" aria-expanded="false" alt="Página web oficina EOL" title="Oficina Eol" target="_blank">
+            <a class="text-decoration-none" href="https://open.uchile.cl/faq" role="button" aria-expanded="false" alt="Página web oficina EOL" title="Oficina Eol" target="_blank">
             https://open.uchile.cl/faq
             </a>
           </p>
