fix(fixup): fixes padding container in certificate validation

--- a/lms/templates/certificates/validate_certificates.html
+++ b/lms/templates/certificates/validate_certificates.html
@@ -9,7 +9,7 @@
     <div class="container-center max-course-container mx-auto">
         <img src="${static.url('open-uchile-theme/images/banner-04-bg.jpg')}" alt='${_("Certificates validation")}' class="mx-auto openuchile-header d-block">
     </div>
-    <div class="container px-3">
+    <div class="container px-3 py-5">
         <h1 class="text-centter m-0">
             ${_("Certificate Validation ")}
         </h1>
